{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 322,
  "lineage": "f1d632ff-0c2f-910f-4477-331e0288a5bd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c55b159cbfafe1f0",
            "arn": "arn:aws:ec2:us-east-2:186675964069:instance/i-05a755db79f2279e1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05a755db79f2279e1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-016ce92be4c8aa51b",
            "private_dns": "ip-10-0-2-5.us-east-2.compute.internal",
            "private_ip": "10.0.2.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b0ebb84a6d64cdee",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cd49ae2418188c72",
            "tags": {
              "Name": "instance-pri"
            },
            "tags_all": {
              "Name": "instance-pri"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d3e1cdd3ed884a97"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-pi",
            "aws_subnet.subnet-pi",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c55b159cbfafe1f0",
            "arn": "arn:aws:ec2:us-east-2:186675964069:instance/i-071aca38ca08519e7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-071aca38ca08519e7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f828eb0c67d4e4d8",
            "private_dns": "ip-10-0-1-4.us-east-2.compute.internal",
            "private_ip": "10.0.1.4",
            "public_dns": "ec2-3-139-62-203.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.62.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b2fc65a9b30025a5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03d97220dc4aca019",
            "tags": {
              "Name": "instance-pub"
            },
            "tags_all": {
              "Name": "instance-pub"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fab6b3548e5fed49"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-p",
            "aws_subnet.subnet-p",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:186675964069:internet-gateway/igw-01f42359944e4e74f",
            "id": "igw-01f42359944e4e74f",
            "owner_id": "186675964069",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0ecefdcfb143fcb32"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:186675964069:route-table/rtb-0dd63d358250d97ba",
            "id": "rtb-0dd63d358250d97ba",
            "owner_id": "186675964069",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01f42359944e4e74f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route"
            },
            "tags_all": {
              "Name": "private-route"
            },
            "vpc_id": "vpc-0ecefdcfb143fcb32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:186675964069:route-table/rtb-0d3d865d5afacff8c",
            "id": "rtb-0d3d865d5afacff8c",
            "owner_id": "186675964069",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01f42359944e4e74f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route"
            },
            "tags_all": {
              "Name": "public-route"
            },
            "vpc_id": "vpc-0ecefdcfb143fcb32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8e9cfdaa2841042",
            "route_table_id": "rtb-0dd63d358250d97ba",
            "subnet_id": "subnet-0cd49ae2418188c72"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.private-route",
            "aws_subnet.subnet-pi",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0592f5fd8b4934022",
            "route_table_id": "rtb-0d3d865d5afacff8c",
            "subnet_id": "subnet-03d97220dc4aca019"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-route",
            "aws_subnet.subnet-p",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-p",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:186675964069:security-group/sg-0fab6b3548e5fed49",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fab6b3548e5fed49",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-p",
            "name_prefix": "",
            "owner_id": "186675964069",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-p"
            },
            "tags_all": {
              "Name": "ssh-p"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ecefdcfb143fcb32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-pi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:186675964069:security-group/sg-0d3e1cdd3ed884a97",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d3e1cdd3ed884a97",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/20"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-pi",
            "name_prefix": "",
            "owner_id": "186675964069",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-pi"
            },
            "tags_all": {
              "Name": "ssh-pi"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ecefdcfb143fcb32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-p",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:186675964069:subnet/subnet-03d97220dc4aca019",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.1.0/28",
            "id": "subnet-03d97220dc4aca019",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "186675964069",
            "tags": {
              "Name": "subnet-p"
            },
            "tags_all": {
              "Name": "subnet-p"
            },
            "vpc_id": "vpc-0ecefdcfb143fcb32"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-pi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:186675964069:subnet/subnet-0cd49ae2418188c72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/28",
            "id": "subnet-0cd49ae2418188c72",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "186675964069",
            "tags": {
              "Name": "subnet-pi"
            },
            "tags_all": {
              "Name": "subnet-pi"
            },
            "vpc_id": "vpc-0ecefdcfb143fcb32"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:186675964069:vpc/vpc-0ecefdcfb143fcb32",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-013a51091bb6c766d",
            "default_route_table_id": "rtb-079fecda7ebab6088",
            "default_security_group_id": "sg-016a8a67f95442c69",
            "dhcp_options_id": "dopt-d8ec8fb3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ecefdcfb143fcb32",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-079fecda7ebab6088",
            "owner_id": "186675964069",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}